manifests/ingress-cloud-armor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: secure-gateway-ingress
  namespace: payments-processing
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "ingress-frontend-config"
    beta.cloud.google.com/backend-config: '{"default": "ingress-waf-backendconfig"}'
spec:
  ingressClassName: gke-l7-global-external-managed
  rules:
  - http:
      paths:
      - path: /api/v1/payments
        pathType: Prefix
        backend:
          service:
            name: transaction-router-service
            port:
              number: 443

# created by @jsaccomani
